# turso-experiment

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  helpers.rs  main.rs
cli/src/tui_app/: app.rs  message.rs  mod.rs  state.rs
ffi/: Cargo.toml
ffi/src/: error.rs  lib.rs
ffi/src/database/: mod.rs
todo-list/src/schema/: schema.sql
