[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "todo-list"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.57", features = ["derive", "string"] }
dirs = "6.0.0"
glob = "0.3.3"
ratatui = "0.30.0"
smol = "2.0.2"
todo-list = { version = "0.1.0", path = "../todo-list" }
turso = "0.4.4"
