[package]
name = "ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.101"
derive_more = { version = "2.1.1", features = ["display", "from"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"

[target.'cfg(target_family = "wasm")'.dependencies]
# these aren't used directly, but we need to enable the js feature
getrandom_2 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
turso = { version = "0.4.4", default-features = false }
uuid = { version = "1.20.0", features = ["js"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
turso = "0.4.4"
